--- a/scene3.html
+++ b/scene3.html
@@ -23,12 +23,24 @@
         const margin = { top: 10, right: 30, bottom: 110, left: 50 }, width = 1000 - margin.left - margin.right, height = 400 - margin.top - margin.bottom;
 
         // append the svg object to the body of the page
-        const svg = d3.select("#my_dataviz")
+        var svg = d3.select("#my_dataviz")
             .append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
             .append("g")
             .attr("transform", `translate(${margin.left},${margin.top})`);
+
+        // Add X Axis
+        var x = d3.scaleBand()
+                .range([0, width])
+                .padding([0.2])
+        var xAxis = svg.append("g").attr("transform", `translate(0, ${height})`);
+
+        // Add Y axis
+        var y = d3.scaleLinear()
+                    .range([height, 0]);
+        var yAxis = svg.append("g")
+                    .attr("class", "myYaxis")
 
 
         //Function to update the chart on clicking button
@@ -51,7 +63,12 @@
                     return { key, AverageHighwayMPG, AverageCityMPG };
                 });
 
-                console.log(meanCarData);           
+                console.log(meanCarData);   
+                
+                meanCarData.sort(function(x, y){
+                    return d3.descending(x.AverageHighwayMPG, y.AverageHighwayMPG);
+                });
+                console.log("Sorted mean car data " + meanCarData);
 
                 // List of groups = species here = value of the first column called group -> I show them on the X axis
                 var groups = d3.map(meanCarData, function(d){return(d.key)})
@@ -60,26 +77,18 @@
 
                 console.log(subgroups.map(function(key) { return {key: key, value: meanCarData[key]}; }));
 
-                // Add X axis
-                const x = d3.scaleBand()
-                    .domain(groups)
-                    .range([0, width])
-                    .padding([0.2])
-                svg.append("g")
-                    .attr("transform", `translate(0, ${height})`)
-                    .call(d3.axisBottom(x).tickSizeOuter(0))
+                // Update X axis
+                x.domain(groups);
+                xAxis.call(d3.axisBottom(x).tickSizeOuter(0))
                     .selectAll("text")
                     .style("text-anchor", "end")
                     .attr("dx", "-.8em")
                     .attr("dy", ".15em")
                     .attr("transform", "rotate(-65)");
 
-                // Add Y axis
-                const y = d3.scaleLinear()
-                    .domain([0, 150])
-                    .range([height, 0]);
-                svg.append("g")
-                    .call(d3.axisLeft(y));
+                // Update Y axis
+                y.domain([0, d3.max(meanCarData, function(d) { return d.AverageHighwayMPG}) ]);
+                yAxis.transition().duration(1000).call(d3.axisLeft(y));
 
                 // Another scale for subgroup position?
                 var xSubgroup = d3.scaleBand()
@@ -91,6 +100,19 @@
                 var color = d3.scaleOrdinal()
                 .domain(subgroups)
                 .range(['orange','steelblue'])
+
+                // Create the u variable
+                var u = svg.selectAll("g")
+                    .data(meanCarData)
+
+                // u.join("rect")
+                //     .transition()
+                //     .duration(1000)
+                //     .attr("x", d => x(d.group))
+                //     .attr("y", d => y(d.value))
+                //     .attr("width", x.bandwidth())
+                //     .attr("height", d => height - y(d.value))
+                //     .attr("fill", "#69b3a2")
 
                 svg.append("g")
                     .selectAll("g")
@@ -106,6 +128,8 @@
                     .attr("width", xSubgroup.bandwidth())
                     .attr("height", function (d) { return height - y(d.value); })
                     .attr("fill", function(d) { return color(d.key); });
+
+                svg.selectAll("text").remove()
 
                 svg.append("text")
                     .attr("transform",
