Adjust legend height

--- a/scene1.html
+++ b/scene1.html
@@ -124,7 +124,7 @@
             .enter()
             .append("rect")
                 .attr("x", width-100)
-                .attr("y", function(d,i){ return 100 + i*(size+5)}) // 100 is where the first dot appears. 25 is the distance between dots
+                .attr("y", function(d,i){ return 50 + i*(size+5)}) // 100 is where the first dot appears. 25 is the distance between dots
                 .attr("width", size)
                 .attr("height", size)
                 .style("fill", function(d){ return color(d.key)})
@@ -135,8 +135,8 @@
             .enter()
             .append("text")
                 .attr("x", width - 100 + size*1.2)
-                .attr("y", function(d,i){ return 100 + i*(size+5) + (size/2)}) // 100 is where the first dot appears. 25 is the distance between dots
-                .style("fill", function(d){ return color(d.key)})
+                .attr("y", function(d,i){ return 50 + i*(size+5) + (size/2)}) // 100 is where the first dot appears. 25 is the distance between dots
+                .style("fill", function(d){ return d.key === "Highway" ? color("AverageHighwayMPG"): color("AverageCityMPG")})
                 .text(function(d){ return d})
                 .attr("text-anchor", "left")
                 .style("alignment-baseline", "middle")
