Add manual legend

--- a/scene1.html
+++ b/scene1.html
@@ -116,30 +116,11 @@
                 .text("Average MPG");
 
             //Legend
-            var legendKeys = ["Highway", "City"];
-            // Add one dot in the legend for each name.
-            var size = 20
-            svg.selectAll("mydots")
-            .data(legendKeys)
-            .enter()
-            .append("rect")
-                .attr("x", width-100)
-                .attr("y", function(d,i){ return 50 + i*(size+5)}) // 100 is where the first dot appears. 25 is the distance between dots
-                .attr("width", size)
-                .attr("height", size)
-                .style("fill", function(d){ return color(d.key)})
-
-            // Add one dot in the legend for each name.
-            svg.selectAll("mylabels")
-            .data(legendKeys)
-            .enter()
-            .append("text")
-                .attr("x", width - 100 + size*1.2)
-                .attr("y", function(d,i){ return 50 + i*(size+5) + (size/2)}) // 100 is where the first dot appears. 25 is the distance between dots
-                .style("fill", function(d){ return d.key === "Highway" ? color("AverageHighwayMPG"): color("AverageCityMPG")})
-                .text(function(d){ return d})
-                .attr("text-anchor", "left")
-                .style("alignment-baseline", "middle")
+            svg.append("circle").attr("cx",width-100).attr("cy",75).attr("r", 10).style("fill", "orange")
+            svg.append("circle").attr("cx",width-100).attr("cy",105).attr("r", 10).style("fill", "steelblue")
+            svg.append("text").attr("x", width-100+(20*1.5)).attr("y", 75).text("Highway").style("font-size", "20px").attr("alignment-baseline","middle")
+            svg.append("text").attr("x", width-100+(20*1.5)).attr("y", 105).text("City").style("font-size", "20px").attr("alignment-baseline","middle")
+            
         });
     </script>
 
