--- a/scene2.html
+++ b/scene2.html
@@ -114,6 +114,12 @@
                     .attr("dy", "1em")
                     .style("text-anchor", "middle")
                     .text("Average MPG");
+
+                //Legend
+                svg.append("circle").attr("cx",width-80).attr("cy",45).attr("r", 10).style("fill", "orange");
+                svg.append("circle").attr("cx",width-80).attr("cy",75).attr("r", 10).style("fill", "steelblue");
+                svg.append("text").attr("x", width-80+(10*1.5)).attr("y", 45).text("Highway").style("font-size", "20px").attr("alignment-baseline","middle");
+                svg.append("text").attr("x", width-80+(10*1.5)).attr("y", 75).text("City").style("font-size", "20px").attr("alignment-baseline","middle");
             });
 
     
