--- a/scene3.html
+++ b/scene3.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Scene 3</title>
+    <title>Explore More</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
-    <h1>Scene 3</h1>
+    <h1>Explore More</h1>
     <p>Scene 3 Content</p>
 
     <button id="electricButton">Electric</button>
