--- a/scene1.html
+++ b/scene1.html
@@ -127,6 +127,27 @@
             svg.append("text").attr("x", width-80+(10*1.5)).attr("y", 45).text("Highway").style("font-size", "20px").attr("alignment-baseline","middle");
             svg.append("text").attr("x", width-80+(10*1.5)).attr("y", 75).text("City").style("font-size", "20px").attr("alignment-baseline","middle");
    
+            //Annotations
+            // Features of the annotation
+            const annotations = [
+            {
+                note: {
+                label: "Here is the annotation label",
+                title: "Annotation title"
+                },
+                x: 100,
+                y: 100,
+                dy: 100,
+                dx: 100
+            }
+            ]
+
+            // Add annotation to the chart
+            const makeAnnotations = d3.annotation()
+            .annotations(annotations)
+            d3.select("#example1")
+            .append("g")
+            .call(makeAnnotations)
             
         });
 
