--- a/scene2.html
+++ b/scene2.html
@@ -6,7 +6,7 @@
         <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
     <body>
-        <h1>Gasoline Car Fuel Efficiency</h1>
+        <h1>Gasoline Car Fuel Efficiency in 2017</h1>
         <p>Scene 2 Content</p>
         <div id="scene2"></div>
 
