--- a/scene1.html
+++ b/scene1.html
@@ -129,14 +129,7 @@
    
             //Annotations
             // Features of the annotation
-            const type = d3.annotationCustomType(
-                d3.annotationLabel, 
-                {"className":"custom",
-                    "connector":{"end":"arrow",
-                    "type":"curve"},
-                    "note":{"align":"middle",
-                    "orientation":"leftRight",
-                    "lineType":"horizontal"}});
+            const type = d3.annotationCallout;
 
             const annotations = [
             {
@@ -146,17 +139,16 @@
                 },
                 x: 50,
                 y: 110,
-                dy: -40,
+                dy: -60,
                 dx: 100
             }
             ]
 
             // Add annotation to the chart
-            const makeAnnotations = d3.annotation()
-            .annotations(annotations)
+            const makeAnnotations = d3.annotation().type(type).annotations(annotations);
             svg.append("g")
             .attr("class", "annotation-group")
-            .call(makeAnnotations)
+            .call(makeAnnotations);
             
         });
 
