--- a/scene1.html
+++ b/scene1.html
@@ -130,7 +130,6 @@
             //Annotations
             // Features of the annotation
             const type = d3.annotationCallout;
-
             const annotations = [
             {
                 note: {
@@ -139,8 +138,18 @@
                 },
                 x: 50,
                 y: 110,
-                dy: -70,
-                dx: 80
+                dy: -60,
+                dx: 70
+            },
+            {
+                note: {
+                label: "Highway: City:",
+                title: "Min Fuel Effeciency"
+                },
+                x: width-70,
+                y: 200,
+                dy: -60,
+                dx: width- 100
             }
             ]
 
