--- a/scene1.html
+++ b/scene1.html
@@ -139,17 +139,18 @@
                 x: 50,
                 y: 110,
                 dy: -60,
-                dx: 70
+                dx: 70,
+                color: "black"
             },
             {
                 note: {
                 label: "Highway: City:",
                 title: "Min Fuel Effeciency"
                 },
-                x: width-70,
+                x: width-50,
                 y: 200,
-                dy: -60,
-                dx: width- 100
+                dy: -80,
+                dx: width-30
             }
             ]
 
