--- a/scene2.html
+++ b/scene2.html
@@ -4,6 +4,7 @@
         <title>Gasoline Car Fuel Efficiency</title>
         <link rel="stylesheet" href="style.css">
         <script src="https://d3js.org/d3.v7.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js" integrity="sha512-iBAeBWWWFb8HqSBcrqcz98iIpuVH1la39dEYHtyQ/pGpeCQTQVvLJOWAuhv2Q7JSHp9k7hWA7sGxU3hHJe+tFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
     <body>
         <h1>Gasoline Car Fuel Efficiency in 2017</h1>
@@ -117,7 +118,7 @@
                     .attr("x", 0 - (height / 2))
                     .attr("dy", "1em")
                     .style("text-anchor", "middle")
-                    .text("Average MPG");
+                    .text("Average Miles Per Gallon");
 
                 //Legend
                 svg.append("circle").attr("cx",width-80).attr("cy",45).attr("r", 10).style("fill", "orange");
@@ -131,36 +132,36 @@
             });
 
             function addAnnotations(svg, dataType, data) {
-            var type = d3.annotationCallout;
-            var highwayMPG = data.AverageHighwayMPG;
-            var cityMPG = data.AverageCityMPG;
-            var annotationLabel = "Highway:" + highwayMPG + "/City:" + cityMPG;
-            var annotationTitle = dataType === "min" ? "Min": "Max";
-            var annotationX = dataType === "min" ? width-50: 50;
-            var annotationY = dataType === "min" ? 200: 110;
-            var annotationDX = dataType === "min" ? width+30: 70;
-            var annotationDY = dataType === "min" ? -80: -60;
+                var type = d3.annotationCallout;
+                var highwayMPG = data.AverageHighwayMPG;
+                var cityMPG = data.AverageCityMPG;
+                var annotationLabel = "Highway:" + highwayMPG + "/City:" + cityMPG;
+                var annotationTitle = dataType === "min" ? "Min": "Max";
+                var annotationX = dataType === "min" ? width-50: 50;
+                var annotationY = dataType === "min" ? 200: 110;
+                var annotationDX = dataType === "min" ? width+30: 70;
+                var annotationDY = dataType === "min" ? -80: -60;
 
-            var annotations = [
-            {
-                note: {
-                label: annotationLabel,
-                title: annotationTitle
+                var annotations = [
+                {
+                    note: {
+                    label: annotationLabel,
+                    title: annotationTitle
+                    },
+                    x: annotationX,
+                    y: annotationY,
+                    dy: annotationDY,
+                    dx: annotationDX,
+                    color: "black"
                 },
-                x: annotationX,
-                y: annotationY,
-                dy: annotationDY,
-                dx: annotationDX,
-                color: "black"
-            },
-            ]
+                ]
 
-            // Add annotation to the chart
-            var makeAnnotations = d3.annotation().type(type).annotations(annotations);
-            svg.append("g")
-            .attr("class", "annotation-group")
-            .call(makeAnnotations);
-        }
+                // Add annotation to the chart
+                var makeAnnotations = d3.annotation().type(type).annotations(annotations);
+                svg.append("g")
+                .attr("class", "annotation-group")
+                .call(makeAnnotations);
+            }
 
     
         </script>
