--- a/scene1.html
+++ b/scene1.html
@@ -21,7 +21,7 @@
               height = 500 - margin.top - margin.bottom;
         
         //Add canvas to page
-        const svg = d3.select("#scene1")
+        var svg = d3.select("#scene1")
             .append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
