--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
         <h5>Click the button below to get started.</h5>
 
-        <button onclick="window.location.href='scene1.html'">Get Started</button>
+        <button class="button" onclick="window.location.href='scene1.html'">Get Started</button>
     </body>
 </html>
