--- a/scene1.html
+++ b/scene1.html
@@ -12,8 +12,8 @@
     <h1>Electric Car Fuel Efficiency in 2017</h1>
     <p>Scene 1 Content</p>
     <div id="scene1"></div>
-    <button onclick="window.location.href='index.html'">Previous</button>
-    <button onclick="window.location.href='scene2.html'">Next</button>
+    <button class="button" onclick="window.location.href='index.html'">Previous</button>
+    <button class="button" onclick="window.location.href='scene2.html'">Next</button>
     <script>
         
         const margin = { top: 10, right: 30, bottom: 110, left: 50 }, 
