--- a/scene2.html
+++ b/scene2.html
@@ -11,8 +11,8 @@
         <p>Scene 2 Content</p>
         <div id="scene2"></div>
 
-        <button onclick="window.location.href='scene1.html'">Previous</button>
-        <button onclick="window.location.href='scene3.html'">Next</button>
+        <button class="button" onclick="window.location.href='scene1.html'">Previous</button>
+        <button class="button" onclick="window.location.href='scene3.html'">Next</button>
         <script>
             const margin = { top: 10, right: 30, bottom: 110, left: 50 },
                   width = 1000 - margin.left - margin.right, 
