--- a/scene3.html
+++ b/scene3.html
@@ -131,8 +131,8 @@
                     })
                     .on("mousemove", function(event, d){
                         tooltip.html("Car Make: " + d.key + "<br/>Highway MPG: " + d.value)
-                                .style("left", d3.event.pageX + 10 + "px")
-                                .style("top", d3.event.pageY - 25 + "px")
+                                .style("left", (event.pageX)+ "px")
+                                .style("top", (event.pageY) + "px")
                     })
 
 
