--- a/scene3.html
+++ b/scene3.html
@@ -108,7 +108,7 @@
                 .range(['orange','steelblue'])
 
                 var tooltipLabel = function(d) {
-                    return d === "AvgHighwayMPG" ? "Average Highway MPG: " : "Average City MPG: ";
+                    return d === "AverageHighwayMPG" ? "Average Highway MPG: " : "Average City MPG: ";
                 }
 
 
@@ -130,7 +130,7 @@
                         tooltip.transition()
                             .duration(200)
                             .style('opacity', 0.9)
-                        tooltip.html("Car Make: " + xSubgroup(d.key) + "<br/>" + tooltipLabel(d.key) + d.value)
+                        tooltip.html(tooltipLabel(d.key) + d.value)
                                 .style("left", (event.pageX)+ "px")
                                 .style("top", (event.pageY - 28) + "px")
                     })
